--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -626,6 +626,10 @@
     "    plt.legend()\n",
     "    plt.savefig(f\"{REPORT_FIGURES}{EX6}mse_cv_fold_compare_degrees.pdf\")\n",
     "\n",
+    "    if degree == 10:\n",
+    "        print(f\"MSE: {mean_folds_error}\")\n",
+    "        print(f\"STD: {mse_std_arr}\")\n",
+    "\n",
     "plt.show()"
    ]
   },
