--- a/code/Exercise4.ipynb
+++ b/code/Exercise4.ipynb
@@ -58,7 +58,8 @@
    "outputs": [],
    "source": [
     "#generate some data:\n",
-    "np.random.seed(4155)\n",
+    "SEED = 4155\n",
+    "np.random.seed(SEED)\n",
     "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
@@ -98,7 +99,7 @@
     "\n",
     "        X = create_X(x,y,n=deg)\n",
     "\n",
-    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), 4155, scale_X=True, skip_intercept=True)\n",
+    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), SEED, scale_X=True, skip_intercept=True)\n",
     "\n",
     "        model = RidgeRegression(lambdas[lmb])\n",
     "        z_hat_train = model.fit(X_train, z_train)\n",
@@ -197,7 +198,7 @@
     "# NO NOISE\n",
     "\n",
     "X = create_X(x,y,degree)\n",
-    "X_train, X_test, t_train, t_test = prepare_data(X,t_nonoise.ravel(),4155, scale_X=True, skip_intercept=True)\n",
+    "X_train, X_test, t_train, t_test = prepare_data(X,t_nonoise.ravel(),SEED, scale_X=True, skip_intercept=True)\n",
     "\n",
     "print(X_train.shape)\n",
     "\n",
@@ -237,7 +238,7 @@
     "# NOISE and OLS for comparison\n",
     "\n",
     "X = create_X(x,y,degree)\n",
-    "X_train, X_test, t_train, t_test = prepare_data(X,t.ravel(), 4155, scale_X=True, skip_intercept=True)\n",
+    "X_train, X_test, t_train, t_test = prepare_data(X,t.ravel(), SEED, scale_X=True, skip_intercept=True)\n",
     "\n",
     "#X_train = X_train[:,1:]\n",
     "#X_test = X_test[:,1:]\n",
@@ -294,10 +295,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEED_VALUE = np.random.seed(4155)\n",
-    "maxdegree = 12\n",
-    "n = 20\n",
-    "n_bootstraps = n - int(0.5*n)\n",
+    "np.random.seed(SEED)\n",
+    "maxdegree = 18\n",
+    "n_points = [20, 40]\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
@@ -315,25 +315,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(lambdas)):\n",
-    "    lmb = lambdas[i]\n",
-    "    polydegree = np.arange(1, maxdegree+1)\n",
-    "    MSE_test, MSE_train, bias, variance = bootstrap(x, y, z, maxdegree, n_bootstraps, RidgeRegression(lmb), SEED_VALUE)\n",
+    "for n in n_points:\n",
+    "    for i in [0, len(lambdas)-1]:\n",
+    "        n_bootstraps = int(0.2*n**2)\n",
+    "        lmb = lambdas[i]\n",
+    "        polydegree = np.arange(1, maxdegree+1)\n",
+    "        MSE_test, MSE_train, bias, variance = bootstrap(x, y, z, maxdegree, n_bootstraps, RidgeRegression(lmb), SEED)\n",
     "\n",
-    "    plt.semilogy(polydegree, MSE_test,\"m\", label='MSE test')\n",
-    "    #plt.semilogy(polydegree, MSE_train,\"c\", label='MSE train')\n",
-    "    plt.semilogy(polydegree, bias,\"b--\", label='bias')\n",
-    "    plt.semilogy(polydegree, variance,\"r--\", label='Variance')\n",
-    "    #plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
+    "        plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\n",
+    "        #plt.plot(polydegree, MSE_train,\"c\", label='MSE train')\n",
+    "        plt.plot(polydegree, bias,\"b--\", label='bias')\n",
+    "        plt.plot(polydegree, variance,\"r--\", label='Variance')\n",
+    "        #plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
     "\n",
-    "    plt.title(fr\"Bias-Variance tradeoff with $\\lambda$: {lmb:.0e}\")\n",
-    "    plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
-    "    plt.ylabel(\"Prediction Error - MSE\")\n",
-    "    plt.xticks(polydegree)\n",
-    "    plt.grid(True)\n",
-    "    plt.legend()\n",
-    "    plt.savefig(f\"{REPORT_FIGURES}{EX4}ridge_complexity_using_bootstrap_function_lmb{i}.pdf\")\n",
-    "    plt.show()"
+    "        plt.title(fr\"Bias-Variance tradeoff for {n*n} datapoints using {n_bootstraps} bootstraps with $\\lambda$: {lmb:.0e}\")\n",
+    "        plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
+    "        plt.ylabel(\"Prediction Error - MSE\")\n",
+    "        plt.xticks(polydegree)\n",
+    "        plt.grid(True)\n",
+    "        plt.legend()\n",
+    "        plt.savefig(f\"{REPORT_FIGURES}{EX4}ridge_complexity_using_bootstrap_function_lmb{n}{i}.pdf\")\n",
+    "        plt.show()"
    ]
   },
   {
@@ -349,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEED_VALUE = np.random.seed(4155)\n",
+    "np.random.seed(SEED)\n",
     "maxdegree = 12\n",
     "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
@@ -365,7 +367,8 @@
     "for i in range(nlambdas+1):\n",
     "    lmb = lambdas[i]\n",
     "\n",
-    "    boot_strp_MSE_test, _, _, _ = bootstrap(x, y, t, maxdegree, int(n/5), RidgeRegression(lmb), SEED_VALUE)\n",
+    "    boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, z, maxdegree, int(0.2*n**2), RidgeRegression(lmb), SEED)\n",
+    "    boot_strp_std = np.sqrt(boot_strp_variance)\n",
     "\n",
     "    for degree in range(3,maxdegree):\n",
     "        X = create_X(x,y,degree)\n",
@@ -374,11 +377,14 @@
     "        mean_folds_error = np.zeros(6)\n",
     "        mse_std_arr = np.zeros(6)\n",
     "        for folds in range(5,11):\n",
-    "            implemented_scores = cross_val(k = folds, model = \"Ridge\", X = X, z = t,degree=degree,lmb=lmb, shuffle=True,random_state = SEED_VALUE, scale_t=False)\n",
+    "        \n",
+    "            implemented_scores = cross_val(k = folds, model = \"Ridge\", X = X, z = t, degree=degree, shuffle=True, scale_t=False, lmb=lmb)\n",
     "            mean_folds_error[folds-5] = np.mean(implemented_scores)\n",
     "            mse_std_arr[folds-5] = np.std(implemented_scores)\n",
     "    \n",
-    "        plt.plot(np.arange(5,11), np.ones(6)*boot_strp_MSE_test[degree],\"--\", label =\"Mean MSE bootstrap\")\n",
+    "        plt.plot(np.arange(5,11), np.ones(6)*boot_strp_MSE_test[degree],\"--\", label =\"Mean MSE bootstrap with STD\")\n",
+    "        #plt.fill_between(np.arange(5,11), np.ones(6)*boot_strp_MSE_test[degree]-boot_strp_std[degree],\n",
+    "                        #np.ones(6)*boot_strp_MSE_test[degree]+boot_strp_std[degree], alpha = 0.2 )\n",
     "        plt.plot(np.arange(5,11), mean_folds_error, \"o--\",  label = \"Mean MSE CV\")\n",
     "        plt.fill_between(np.arange(5,11), mean_folds_error-mse_std_arr, mean_folds_error+mse_std_arr,  alpha = 0.2, color = \"darkorange\")\n",
     "        plt.title(fr\"Model complexity: {degree} degrees, $\\lambda$ = {lmb:.2e}\")\n",
@@ -388,25 +394,18 @@
     "        plt.xticks(np.arange(5,11))\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
-    "        plt.savefig(f\"{REPORT_FIGURES}{EX5}mse_cv_boot{i}{degree}.pdf\")\n",
+    "        plt.savefig(f\"{REPORT_FIGURES}{EX4}mse_cv_boot{i}{degree}.pdf\")\n",
     "\n",
     "        plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "20551ddceb59dc51fa628b42bb2a7289171df926f90359af355cededb82457a3"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit ('in5520': conda)",
+   "display_name": "Python 3.9.7 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -419,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
