--- a/code/Exercise5.ipynb
+++ b/code/Exercise5.ipynb
@@ -59,15 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEED = np.random.seed(4155)\n",
+    "SEED = 6853\n",
+    "np.random.seed(SEED)\n",
     "maxdegree = 12\n",
     "n = 20\n",
     "x = np.sort(np.random.uniform(0, 1, n))\n",
     "y = np.sort(np.random.uniform(0, 1, n))\n",
     "x,y = np.meshgrid(x,y)\n",
     "t = FrankeFunction(x, y) + noise_factor(n, factor=0.2)\n",
-    "min_lambda = -9\n",
-    "max_lambda = 4\n",
+    "min_lambda = -7\n",
+    "max_lambda = 2\n",
     "nlambdas = 100\n",
     "lambdas = np.logspace(min_lambda, max_lambda, nlambdas)"
    ]
@@ -105,9 +106,9 @@
     "\n",
     "        X = create_X(x,y,n=deg)\n",
     "\n",
-    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), 4155, scale_X=True, skip_intercept=True)\n",
+    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), SEED, scale_X=True, skip_intercept=True)\n",
     "\n",
-    "        model = lm.Lasso(lambdas[lmb], fit_intercept=False)\n",
+    "        model = lm.Lasso(lambdas[lmb], fit_intercept=False, random_state=SEED)\n",
     "        model.fit(X_train, z_train)\n",
     "        z_hat_train = model.predict(X_train)\n",
     "        z_hat_test = model.predict(X_test)\n",
@@ -148,17 +149,19 @@
     "print(degs.shape)\n",
     "print(lambs.shape)\n",
     "print(test_mse.shape)\n",
+    "ax.scatter(optimal_deg - 1, lambda_degree, best_mse, c='r', marker='o', s=100)\n",
+    "\n",
     "surf = ax.plot_surface(degs, lambs, test_mse.swapaxes(0,1), cmap=cm.coolwarm)\n",
     "ax.view_init(elev=14., azim=-58.)\n",
-    "ax.scatter(optimal_deg - 1, lambda_degree, best_mse, c='r', marker='o', s=100)\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX5}search_landscape_lasso.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}{EX5}search_landscape_lasso.pdf\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Betaplot showing effect of L1 regularizer"
+    "# Bootstrap with Lasso"
    ]
   },
   {
@@ -168,18 +171,48 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "for deg in range(1, maxdegree-3):     # Only want the first 8\n",
-    "    betas = []\n",
-    "    summaries_df = pd.DataFrame()\n",
-    "    for lmb in lambdas:\n",
-    "        X = create_X(x,y,n=deg)\n",
-    "        X_train, X_test, z_train, z_test = prepare_data(X, t.ravel(), 4155, scale_X=True, skip_intercept=True)\n",
-    "        model = lm.Lasso(lmb, fit_intercept=False)\n",
-    "        model.fit(X_train, z_train)\n",
-    "        betas.append(model.get_params())\n",
-    "        \n",
-    "    #fig = plot_beta_errors_for_lambdas(summaries_df, deg)\n",
-    "    #plt.savefig(f\"{REPORT_FIGURES}{EX4}beta_plot_ridge_{deg}.pdf\")"
+    "np.random.seed(SEED)\n",
+    "maxdegree = 18\n",
+    "n_points = [20, 40]\n",
+    "x = np.sort(np.random.uniform(0, 1, n))\n",
+    "y = np.sort(np.random.uniform(0, 1, n))\n",
+    "x,y = np.meshgrid(x,y)\n",
+    "z = FrankeFunction(x,y) + noise_factor(n, factor=0.2)\n",
+    "\n",
+    "min_lambda = -7\n",
+    "max_lambda = 2\n",
+    "nlambdas=100\n",
+    "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)\n",
+    "#lambdas = [np.log10(min_lambda), optimal_lmb, np.log10(max_lambda)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in n_points:\n",
+    "    for i in [0, lambda_degree, len(lambdas)-1]:\n",
+    "        n_bootstraps = int(0.5*n)\n",
+    "        lmb = lambdas[i]\n",
+    "        polydegree = np.arange(1, maxdegree+1)\n",
+    "        MSE_test, MSE_train, bias, variance = bootstrap(x, y, z, maxdegree, n_bootstraps, lm.Lasso(lmb, fit_intercept=False, random_state=SEED), SEED, is_scikit=True)\n",
+    "\n",
+    "        plt.plot(polydegree, MSE_test,\"m\", label='MSE test')\n",
+    "        #plt.plot(polydegree, MSE_train,\"c\", label='MSE train')\n",
+    "        plt.plot(polydegree, bias,\"b--\", label='bias')\n",
+    "        plt.plot(polydegree, variance,\"r--\", label='Variance')\n",
+    "        #plt.plot(polydegree, bias+variance,\"g--\", label='bias+variance')\n",
+    "\n",
+    "        plt.title(fr\"Bias-Variance tradeoff for {n*n} datapoints using {n_bootstraps} bootstraps with $\\lambda$: {lmb:.0e}\")\n",
+    "        plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
+    "        plt.ylabel(\"Prediction Error - MSE\")\n",
+    "        plt.xticks(polydegree)\n",
+    "        plt.grid(True)\n",
+    "        plt.legend()\n",
+    "        plt.savefig(f\"{REPORT_FIGURES}{EX5}lasso_complexity_using_bootstrap_function_lmb{n}{i}.pdf\")\n",
+    "        plt.show()"
    ]
   },
   {
@@ -188,6 +221,60 @@
    "source": [
     "# Cross Validation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(SEED)\n",
+    "maxdegree = 12\n",
+    "n = 20\n",
+    "x = np.sort(np.random.uniform(0, 1, n))\n",
+    "y = np.sort(np.random.uniform(0, 1, n))\n",
+    "x,y = np.meshgrid(x,y)\n",
+    "z = FrankeFunction(x,y) + noise_factor(n, factor=0.2)\n",
+    "\n",
+    "min_lambda = -7\n",
+    "max_lambda = 2\n",
+    "nlambdas = 3\n",
+    "lambdas = np.logspace(min_lambda,max_lambda, nlambdas+1)\n",
+    "\n",
+    "for i in range(nlambdas+1):\n",
+    "    lmb = lambdas[i]\n",
+    "\n",
+    "    boot_strp_MSE_test, _, _, boot_strp_variance = bootstrap(x, y, z, maxdegree, int(0.5*n), lm.Lasso(lmb, fit_intercept=False, random_state=SEED), SEED, is_scikit=True)\n",
+    "    boot_strp_std = np.sqrt(boot_strp_variance)\n",
+    "\n",
+    "    for degree in range(3,maxdegree):\n",
+    "        X = create_X(x,y,degree)\n",
+    "        X = remove_intercept(X)\n",
+    "        \n",
+    "        mean_folds_error = np.zeros(6)\n",
+    "        mse_std_arr = np.zeros(6)\n",
+    "        for folds in range(5,11):\n",
+    "            \n",
+    "            implemented_scores = cross_val(k = folds, model = \"Lasso\", X = X, z = z, degree=degree,lmb=lmb, shuffle=True, random_state = SEED, scale_t=False)\n",
+    "            mean_folds_error[folds-5] = np.mean(implemented_scores)\n",
+    "            mse_std_arr[folds-5] = np.std(implemented_scores)\n",
+    "\n",
+    "        plt.plot(np.arange(5,11), np.ones(6)*boot_strp_MSE_test[degree],\"--\", label =\"Mean MSE bootstrap with STD\")\n",
+    "        #plt.fill_between(np.arange(5,11), np.ones(6)*boot_strp_MSE_test[degree]-boot_strp_std[degree],\n",
+    "                        #np.ones(6)*boot_strp_MSE_test[degree]+boot_strp_std[degree], alpha = 0.2 )\n",
+    "        plt.plot(np.arange(5,11), mean_folds_error, \"o--\",  label = \"Mean MSE CV\")\n",
+    "        plt.fill_between(np.arange(5,11), mean_folds_error-mse_std_arr, mean_folds_error+mse_std_arr,  alpha = 0.2, color = \"darkorange\")\n",
+    "        plt.title(fr\"Model complexity: {degree} degrees, $\\lambda$ = {lmb:.2e}\")\n",
+    "        plt.xlabel(\"K-fold\")\n",
+    "        plt.ylabel(\"MSE\")\n",
+    "        #plt.ylim(0,2)\n",
+    "        plt.xticks(np.arange(5,11))\n",
+    "        plt.grid(True)\n",
+    "        plt.legend()\n",
+    "        plt.savefig(f\"{REPORT_FIGURES}{EX5}lasso_mse_cv_boot{i}{degree}.pdf\")\n",
+    "\n",
+    "        plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -195,7 +282,7 @@
    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.7 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -208,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
