--- a/code/Exercise2.ipynb
+++ b/code/Exercise2.ipynb
@@ -93,7 +93,7 @@
     "    plt.legend(loc=1)\n",
     "    plt.title(f\"Bias variance trade-off, {n**2} datapoints\")\n",
     "    plt.xticks(np.arange(1,maxdegree+1))\n",
-    "    plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_bias_var_function_n_{n}.pdf\")\n",
+    "    #plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_bias_var_function_n_{n}.pdf\")\n",
     "    plt.show()"
    ]
   },
@@ -119,7 +119,7 @@
     "        x = np.sort(np.random.uniform(0, 1, n))\n",
     "        y = np.sort(np.random.uniform(0, 1, n))\n",
     "        x,y = np.meshgrid(x,y)\n",
-    "        t = FrankeFunction(x,y) + noise_factor(n, factor=0.2)\n",
+    "        t = FrankeFunction(x,y) + noise_factor(n, factor=0.3)\n",
     "\n",
     "\n",
     "        polydegree = np.arange(1, maxdegree+1)\n",
@@ -137,8 +137,8 @@
     "        plt.xticks(polydegree)\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
-    "        plt.title(f\"Bias variance trade-off with {n_bootstraps} bootstraps, {n**2} datapoints. Test size: {test_size}\")\n",
-    "        plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_using_bootstrap_function_n_{n}_testsize_{test_size}.pdf\")\n",
+    "        plt.title(f\"{n_bootstraps} bootstraps, {n**2} datapoints. Test size: {test_size}\")\n",
+    "        #plt.savefig(f\"{REPORT_FIGURES}{EX2}model_complexity_using_bootstrap_function_n_{n}_testsize_{test_size}.pdf\")\n",
     "        plt.show()"
    ]
   },
